--- a/CSS/style.css
+++ b/CSS/style.css
@@ -10,46 +10,64 @@ body {
     height: 100vh;
     width: 100vw;
     background-image: url(https://tesla-cdn.thron.com/delivery/public/image/tesla/8fa80996-ac5c-4cef-9534-a61a9457bfb3/bvlatuR/std/2880x1800/M3-Hero-LHD-US-D);
-    background-position: center;
+    background-position: 0px 35%;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 100%;
 }
 #navcenter {
-    width: 650px;
-    height: 55px;
+    text-align: center;
     position: sticky;
-    left: 647px;
+    margin-right: 40px;
+    margin-top: -4px;
 }
 #navright {
-    width: 300px;
-    background: white;
+    text-align: right;
     position: sticky;
-    left: 1500px;
+    width: 300px;
+    bottom: 1000px;
+    left: 1575px;
+    font-size: 10px;
+
 }
 ul {
-    /* background: white; */
-    position: sticky;
-    list-style: none;
-    
+    list-style: none;    
 }
 ul li{
     display: inline;
-    position: sticky;
 }
+        #navleft  ul{
+list-style: disc;
+}
+#navleft  ul li{
+display: block;
+}
+
 button {
+    transition-duration: 0.5s;
     font-family: 'Gotham', sans-serif;
     font-weight: 500;
-    color: black;
-    background: black;
+    color: white;
+    background: none;
     border: 100px;
     border-radius: 15px;
-    font-size: 15px;
+    font-size: 14px;
     padding: 10px 17px;
     margin-right: -5px;
 }
 button:hover {
 background: rgba(255, 255, 255, 0.26);
 backdrop-filter: blur(10px);
+}
+.footer button {
+    background: none;
+    padding: 10px 30px;
+    border: 3px white solid;
+    border-radius: 100px;
+    color: white;
+}
+.footer button:hover {
+    background: white;
+    color: black;
 }
 #svg {
     width: 120px;
@@ -59,29 +77,56 @@ backdrop-filter: blur(10px);
 }
 #model3 {
     color: white;
-    font-size: 21px;
+    font-size: 20px;
     position: relative;
+    top: -25px;
     text-align: center;
 }
 h1 {
     font-weight: 500;
 }
-/* #page2{
+.footer {
+    position: relative;
+    left: 665px;
+    width: 680px;
+    top: 625px;
+    text-align: center;
+    color: white;
+}
+.footer h2 {
+    display: inline;
+    padding-right: 60px;
+    font-size: 30px;
+    font-weight: 450;
+
+}
+.footer h6 {
+    display: inline;
+    padding-right: 65px;
+    font-size: 13px;
+    font-weight: 400;
+}
+#footer2 {
+    left: 578px;
+}
+#page2{
     height: 100vh;
     width: 100vw;
     background: #F5F5F5;
     background-image: url(https://tesla-cdn.thron.com/delivery/public/image/tesla/ba4f4fe9-5c46-48c2-ad03-a5c7bf68f30c/bvlatuR/std/2880x1800/model_3_safety_hero);
-    background-position: left;
+    background-position: 51% 110%;
     background-repeat: no-repeat;
-    background-size: 100vw 100vh; */
-/* } */
-/* #page3{
+    background-size: 78%;
+}
+
+#page3{
     height: 100vh;
     width: 100vw;
     background-image: url(https://tesla-cdn.thron.com/delivery/public/image/tesla/3489a82e-b19c-457a-86a4-7ea9ac91aa1c/bvlatuR/std/1920x1080/lhd-performance-hero-desktop);
     background-position: center;
     background-repeat: no-repeat;
-    background-size: 150vh;
-} */
+    background-position: 50% 160%;
+    background-size: cover;
+}
 
 
